<resources>
    <string name="app_name">IoTSSC Bluetooth Serial</string>
    <string name="start_scanning_for_devices">Click scan button to begin</string>
    <string name="connect_to_bluetooth_device">Connect to a Bluetooth Device</string>
    <string name="connecting_to_device">Connecting to Selected Device</string>

    <string name="scan_for_devices">Select a device</string>
    <string name="scanning_for_devices">Scanning for devices</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="connected_device_communication">Connected Device Communication"</string>

    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth devices.
      \n\nThis is because Bluetooth beacons, for example iBeacons or Eddystone, may be used to determine the phone\'s and user\'s location. The <b>IoTSSC</b> app will not use this information in any way.</string>
    <string name="location_permission_action">Grant permission</string>
    <string name="location_permission_settings">Settings</string>

    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
    <string name="bluetooth_disabled_action">Enable</string>

    <string name="blinky_guide_title">CAN\'T SEE ANY BLUETOOTH DEVICES?</string>
    <string name="blinky_guide_info">1. Make sure the DK is <b>turned on</b> and is connected to a power source using a micro USB cable or a coin cell is plugged in.
        \n\n2. Make sure the <b>IoTSSC device</b> firmware is flashed.</string>
    <string name="blinky_guide_location_info">3. Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth devices.
		If you are sure your IoTSSC device is advertising and it doesn\'t show up here, click the button below to enable Location.</string>
    <string name="blinky_guide_location_action">Enable</string>

    <string name="not_supported_title">DEVICE NOT SUPPORTED</string>
    <string name="not_supported_info">1. The IoTSSC service hasn\'t been found.
		\n\n2. Make sure the DK is flashed with the correct firmware.
		\n\n3. If you used the DK with another firmware before, the old services might have been cached by the system.</string>
    <string name="not_supported_action">Fix and try again</string>
    <string name="last_message_from_device">Last message from device:</string>
    <string name="no_device_selected">No device selected</string>
    <string name="connected_to_device">Connected to Device:</string>
    <string name="no_current_message_received">No current message received.</string>
    <string name="send_message_to_device">Send message to device</string>
    <string name="no_last_message_time_known">No last message time known</string>
    <string name="type_a_text_message_to_send_to_your_device">Type a text message to send to your device.</string>
    <string name="device_number">Device Number</string>
    <string name="initialise_the_bluetooth_adapter">Hehehehe... You will need to initialise the Bluetooth Adapter first!</string>


</resources>
